@@ -1,4 +1,4 @@
 DIST onboard-0.92.0.tar.gz 324054 RMD160 aa88843d68eca08b7665cf1cf621ada8ae1ce688 SHA1 74555366a8308b99f2233b351d4171925c8d8084 SHA256 6a6070c52e96d7044d9a9a44bb0f961ce0c37ed353ab0d1401191d14a5fbba3a
-EBUILD onboard-0.92.0.ebuild 692 RMD160 84e6411f97b14742809533be15d43c4b20719aee SHA1 beba8bc8da0b77cc4ec7b0824cbca064a4de82f2 SHA256 d9a4ec0b0d3015bfdb7eff77f53d9878db7d21c475ca517a22e3aa4179296fbb
-MISC ChangeLog 441 RMD160 83390e1bb9f3457265973bb387b304825509aa4b SHA1 17583f372b6797b30316e4b403d9a955e5a1d0b4 SHA256 82007940a79df45fc023b002f1459c4b54718767332fd7c44b297b9593d50940
+EBUILD onboard-0.92.0-r1.ebuild 703 RMD160 f1df3d52793d6e2841039077c0ce3e68b8c6113b SHA1 aaeddd70e141133313b42238b897a5fdb644a171 SHA256 9e114a6b332aa81f6f9fc2ff3676e903e7c4b4174afc7c79293ff72da7ef2c53
+MISC ChangeLog 674 RMD160 120b6c41ac30f3540dca7969ac9a2e5746870f59 SHA1 9703bacc965f760fae44c55d75f95e8504375f69 SHA256 8cb0feb9fab502cb2ea82a90ae42ad5bf1775faf4f28d5a938b96e3c620884f5
 MISC metadata.xml 171 RMD160 ed284df01c230fc7990a6b5888b39166d23f29ba SHA1 f3d64a69044b710e23fb874b3ee4cd338858c8b4 SHA256 a7b30fbacd0e4c312c07a3efac112a3794c81d134442d8104325734d03425adf
